--- a/SimpleApp/app/src/main/res/layout/activity_main.xml
+++ b/SimpleApp/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.phundal2091.simpleapp.MainActivity">
+    tools:context="com.example.phundal2091.simpleapp.ui.login.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/recyclerView"
-        android:layout_marginTop="8dp"/>
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/webview"/>
 </RelativeLayout>
